--- a/pages/index2.html
+++ b/pages/index2.html
@@ -11,7 +11,7 @@
 <div class="container">
 
 <div id="logo" align="center">
-<img src="../img/loupe.PNG" class="logo">
+<img src="../img/loupe.png" class="logo">
 </div>
 
 <hr class="hr1">
@@ -37,7 +37,7 @@
 
 <p class="alltext">Щодня можна побачити людину із гіркуватим напоєм на вулиці чи у кафе. Кава стала невід’ємною частиною життя багатьох. Одні обмежуються чашкою кави на добу. Інші вважають, що і від п’яти філіжанок нічого не станеться. Ароматний напій присутній на діловій зустрічі, побаченні чи на перекурі. Справжні кавомани можуть не бояться пити улюблений напій і перед сном, незважаючи на  загрозу безсоння. </p>
 
-<img class="img" src="../img/khmeln2-min.jpg.pagespeed.ce_.hK33QEk1nw.JPG">
+<img class="img" src="../img/khmeln2-min.jpg.pagespeed.ce_.hK33QEk1nw.jpg">
 
 <p class="header">Кав’ярні</p>
 
@@ -53,7 +53,7 @@
 
 <p class="header">Ресторани та паби</p>
 
-<img class="img" src="../img/161780737_206283131105520_833846819009243771_n (1).JPEG">
+<img class="img" src="../img/161780737_206283131105520_833846819009243771_n (1).jpeg">
 
 <p class="alltext">Brewmen (вул. Проскурівська, 16) – пиво власного виробництва. Смачні страви європейської кухні, жива музика. Доставка їжі.</p>
 
