--- a/index.html
+++ b/index.html
@@ -13,23 +13,20 @@
 <div class="container">
 
 <div id="logo" align="center">
-<img src="img/loupe.png" class="logo">
+<img src="img/loupe.PNG" class="logo">
 </div>
 
 <hr class="hr1">
 
 <nav class="nav">
 
-<a href="" style="color: #964b4b;">ХМЕЛЬНИЦЬКИЙ
+<a href="" style="color: #964b4b; font-size: 17px;">ХМЕЛЬНИЦЬКИЙ
 </a>
 
-<a href="#">/</a>
+<a href="pages/index2.html" style="font-size: 17px;">КАВ'ЯРНІ ТА РЕСТОРАНИ</a>
 
-<a href="pages/index2.html">КАВ'ЯРНІ ТА РЕСТОРАНИ</a>
 
-<a href="">/</a>
-
-<a href="pages/index3.html">КУЛЬТУРА</a>
+<a href="pages/index3.html" style="font-size: 17px;">КУЛЬТУРА</a>
 
 </nav>
 
@@ -41,14 +38,14 @@
 
 <p class="alltext">Місто має давню історію, яка починається з 13 ст. з невеликого поселення Плоскирів або Плоскирівці – назва походить від річки, що протікає поряд. За російської імперії місто було перейменовано в Проскурів, сучасну назву отримало лише в 1954 році на честь Богдана Хмельницького.</p>
 
-<img class="img" src="img/img_1979-scaled-1.jpg">
+<img class="img" src="img/img_1979-scaled-1.JPG">
 
 <p class="alltext">У цьому гайді ми зібрали усі місця, де ти можеш випити смачної кави, дізнатися більше про історію міста і провести атмосферний вечір з друзями.
 </p>
 
 <p class="header">Що подивитися в Хмельницькому</p>
 
-<img class="img" src="img/49239699926_9d5bf410a2_h.jpg">
+<img class="img" src="img/49239699926_9d5bf410a2_h.JPG">
 
 <p class="alltext">Стометрівка. Вулиця Проскурівська, на якій розташувалася Стометрівка одна з найстаріших вулиць міста та улюблениця хмельничан. Усі головні події проходять саме тут. Вуличні музиканти додають атмосфери літніми вечорами, а жителі міста та гості у затишних ресторанчиках попивають смачне вино. Вздовж вулиці можна побачити старі будинки, які мають захопливу історію.</p>
 
@@ -62,7 +59,7 @@
 
 <p class="alltext">Палац урочистих подій (вул. Гагаріна, 4) Двоповерховий історичний будинок, збудований в 1903 році одним з місцевих лікарів. Довгий час тут розміщувався військовий комісаріат, аж поки у 2001 році не було проведено капітальний ремонт й не облаштовано єдиний в місті РАЦС.</p>
 
-<img  class="img" src="img/D0BFD0B0D180D0BAD0BBD0B5D182.jpg">
+<img  class="img" src="img/D0BFD0B0D180D0BAD0BBD0B5D182.JPG">
 
 <p class="alltext">Пожежне депо (вул. Подільська, 39). Колишня будівля пожежного депо стала майже символом міста, все через виразну каланчу, яка тепер слугує чимось на кшталт ратуші. Будівля була зведена в 50-х роках минулого століття й функціонувала за призначенням до 1987 року, після її переробили на дитячий кінотеатр (функціонує й по цей день). Каланчі також знайшли нове призначення: тепер тут стоїть фігура трубача, який грає щодня 9:00, 12:00, 15:00, 18:00 та 21:00.</p>
 
@@ -78,7 +75,7 @@
 
 <p class="alltext">Лавандове поле LavaLand. Знаходиться не в самому місті, але дуже близько до нього, на 2 км Вінницької траси. Тут можна погуляти в кущах лаванди, провести фотосесію, придбати свіжу та суху лаванду, а також саджанці.</p>
 
-<img class="img" src="img/KHmel-nyts-kyy-na-1-stor.jpg-555-1170x780-1.jpg">
+<img class="img" src="img/KHmel-nyts-kyy-na-1-stor.jpg-555-1170x780-1.JPG">
 
 <p class="alltext">Острів кохання. Він розташований проти місця впадіння р. Плоскої в Південний Буг на відстані 100 м від берега річки. У 15-16 ст. тут був побудований дерев’яний замок, але після першої навали монголо-татар він був спалений. Відвідати острів можна орендувавши SUP або каяк.</p>
 
@@ -87,10 +84,10 @@
 
 <div class = 'footer'>
       <center>
-  <a class="footer" style="margin-left: -315px;" href="https://dovkola.media/about/">ПРО ПРОЕКТ</a>
-  <a class="footer" href="https://dovkola.media/partnership/">РЕКЛАМА</a>
-  <a class="footer" href="https://www.patreon.com/dovkolamedia">ПІДТРИМАТИ</a>
-  <a class="footer" href="https://dovkola.media/dlia-avtoriv/">ДЛЯ АВТОРІВ</a>
+  <a class="footer" id="footer" style="margin-left: -315px;" href="https://dovkola.media/about/">ПРО ПРОЕКТ</a>
+  <a class="footer" id="footer" href="https://dovkola.media/partnership/">РЕКЛАМА</a>
+  <a class="footer" id="footer" href="https://www.patreon.com/dovkolamedia">ПІДТРИМАТИ</a>
+  <a class="footer" id="footer" href="https://dovkola.media/dlia-avtoriv/">ДЛЯ АВТОРІВ</a>
   <a style="float: right; margin-right: 200px;">+380639372215</a>
 </center>
 
