--- a/pages/index2.html
+++ b/pages/index2.html
@@ -5,29 +5,29 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Khmelnytskyi</title>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
+				<link rel="stylesheet" type="text/css" href="../css/adaptation.css">
 </head>
 <body align="justify">
 
 <div class="container">
 
 <div id="logo" align="center">
-<img src="../img/loupe.png" class="logo">
+<img src="../img/loupe.PNG" class="logo">
 </div>
 
 <hr class="hr1">
 
 <nav class="nav">
 
-<a href="../index.html">ХМЕЛЬНИЦЬКИЙ
-</a>
+<a href="../index.html" style="font-size: 17px;" > ХМЕЛЬНИЦЬКИЙ
 
-<a href="">/</a>
 
-<a href="" style="color: #964b4b;">КАВ'ЯРНІ ТА РЕСТОРАНИ</a>
 
-<a href="">/</a>
+<a href="" style='color: #964b4b; font-size: 17px;'> КАВ'ЯРНІ ТА РЕСТОРАНИ</a>
 
-<a href="index3.html">КУЛЬТУРА</a>
+
+
+<a href="index3.html" style="font-size: 17px;">КУЛЬТУРА</a>
 
 </nav>
 
@@ -37,7 +37,7 @@
 
 <p class="alltext">Щодня можна побачити людину із гіркуватим напоєм на вулиці чи у кафе. Кава стала невід’ємною частиною життя багатьох. Одні обмежуються чашкою кави на добу. Інші вважають, що і від п’яти філіжанок нічого не станеться. Ароматний напій присутній на діловій зустрічі, побаченні чи на перекурі. Справжні кавомани можуть не бояться пити улюблений напій і перед сном, незважаючи на  загрозу безсоння. </p>
 
-<img class="img" src="../img/khmeln2-min.jpg.pagespeed.ce_.hK33QEk1nw.jpg">
+<img class="img" src="../img/khmeln2-min.jpg.pagespeed.ce_.hK33QEk1nw.JPG">
 
 <p class="header">Кав’ярні</p>
 
@@ -53,7 +53,7 @@
 
 <p class="header">Ресторани та паби</p>
 
-<img class="img" src="../img/161780737_206283131105520_833846819009243771_n (1).jpeg">
+<img class="img" src="../img/161780737_206283131105520_833846819009243771_n (1).JPEG">
 
 <p class="alltext">Brewmen (вул. Проскурівська, 16) – пиво власного виробництва. Смачні страви європейської кухні, жива музика. Доставка їжі.</p>
 
@@ -72,10 +72,10 @@
 
 <div class = 'footer'>
       <center>
-  <a class="footer" style="margin-left: -315px;" href="https://dovkola.media/about/">ПРО ПРОЕКТ</a>
-  <a class="footer" href="https://dovkola.media/partnership/">РЕКЛАМА</a>
-  <a class="footer" href="https://www.patreon.com/dovkolamedia">ПІДТРИМАТИ</a>
-  <a class="footer" href="https://dovkola.media/dlia-avtoriv/">ДЛЯ АВТОРІВ</a>
+  <a class="footer" id="footer" style="margin-left: -315px;" href="https://dovkola.media/about/">ПРО ПРОЕКТ</a>
+  <a class="footer" id="footer" href="https://dovkola.media/partnership/">РЕКЛАМА</a>
+  <a class="footer" id="footer" href="https://www.patreon.com/dovkolamedia">ПІДТРИМАТИ</a>
+  <a class="footer" id="footer" href="https://dovkola.media/dlia-avtoriv/">ДЛЯ АВТОРІВ</a>
   <a style="float: right; margin-right: 200px;">+380639372215</a>
 </center>
 
