--- a/pages/index3.html
+++ b/pages/index3.html
@@ -5,29 +5,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Khmelnytskyi</title>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
+				<link rel="stylesheet" type="text/css" href="../css/adaptation.css">
 </head>
 <body align="justify">
 
 <div class="container">
 
 <div id="logo" align="center">
-<img src="../img/loupe.png" class="logo">
+<img src="../img/loupe.PNG" class="logo">
 </div>
 
 <hr class="hr1">
 
 <nav class="nav">
 
-<a href="../index.html">ХМЕЛЬНИЦЬКИЙ
+<a href="../index.html" style="font-size: 17px;">ХМЕЛЬНИЦЬКИЙ
 </a>
 
-<a href="">/</a>
 
-<a href="index2.html">КАВ'ЯРНІ ТА РЕСТОРАНИ</a>
+<a href="index2.html" style="font-size: 17px;">КАВ'ЯРНІ ТА РЕСТОРАНИ</a>
 
-<a href="">/</a>
 
-<a href="" style="color: #964b4b;">КУЛЬТУРА</a>
+<a href="" style="color: #964b4b; font-size: 17px;">КУЛЬТУРА</a>
 
 </nav>
 
@@ -37,7 +36,7 @@
 
 <p class="alltext">В області забезпечено функціонування  мережі  установ культури і мистецтва, а саме: 798 бібліотек, 1058 клубів  і будинків культури, 25 державних музеї та заповідники, 3 театри, обласна філармонія, 60 початкових спеціалізованих мистецьких навчальних закладів (шкіл естетичного виховання), Хмельницького музичного коледжу  імені В.Заремби, Кам’янець-Подільського коледжу культури і мистецтв, обласного науково-методичного центру культури і мистецтва.</p>
 
-<img class="img" src="../img/maslo_czisaruk-3-scaled-1.jpg">
+<img class="img" src="../img/maslo_czisaruk-3-scaled-1.JPG">
 
 <p class="alltext">Музей-студія фотомистецтва (вул. Проскурівська,56). Музей фотомистецтва є першим та єдиним в Україні. У музейних вітринах виставлено колекцію, що налічує понад 3500 експонатів (фотоапарати, об’єктиви, збільшувачі, експонометри та інше приладдя), які ілюструють розвиток фотографії та виробництва фотоапаратів за період з кінця XIX до кінця XX століття.</p>
 
@@ -56,10 +55,10 @@
 
 <div class = 'footer'>
       <center>
-  <a class="footer" style="margin-left: -315px;" href="https://dovkola.media/about/">ПРО ПРОЕКТ</a>
-  <a class="footer" href="https://dovkola.media/partnership/">РЕКЛАМА</a>
-  <a class="footer" href="https://www.patreon.com/dovkolamedia">ПІДТРИМАТИ</a>
-  <a class="footer" href="https://dovkola.media/dlia-avtoriv/">ДЛЯ АВТОРІВ</a>
+  <a class="footer" id="footer" style="margin-left: -315px;" href="https://dovkola.media/about/">ПРО ПРОЕКТ</a>
+  <a class="footer" id="footer" href="https://dovkola.media/partnership/">РЕКЛАМА</a>
+  <a class="footer" id="footer" href="https://www.patreon.com/dovkolamedia">ПІДТРИМАТИ</a>
+  <a class="footer" id="footer" href="https://dovkola.media/dlia-avtoriv/">ДЛЯ АВТОРІВ</a>
   <a style="float: right; margin-right: 200px;">+380639372215</a>
 </center>
 
