--- a/pages/index3.html
+++ b/pages/index3.html
@@ -36,7 +36,7 @@
 
 <p class="alltext">В області забезпечено функціонування  мережі  установ культури і мистецтва, а саме: 798 бібліотек, 1058 клубів  і будинків культури, 25 державних музеї та заповідники, 3 театри, обласна філармонія, 60 початкових спеціалізованих мистецьких навчальних закладів (шкіл естетичного виховання), Хмельницького музичного коледжу  імені В.Заремби, Кам’янець-Подільського коледжу культури і мистецтв, обласного науково-методичного центру культури і мистецтва.</p>
 
-<img class="img" src="../img/maslo_czisaruk-3-scaled-1.JPG">
+<img class="img" src="../img/maslo_czisaruk-3-scaled-1.jpg">
 
 <p class="alltext">Музей-студія фотомистецтва (вул. Проскурівська,56). Музей фотомистецтва є першим та єдиним в Україні. У музейних вітринах виставлено колекцію, що налічує понад 3500 експонатів (фотоапарати, об’єктиви, збільшувачі, експонометри та інше приладдя), які ілюструють розвиток фотографії та виробництва фотоапаратів за період з кінця XIX до кінця XX століття.</p>
 
